feat: 序列构成的数组

--- a/FluentPython/02_序列构成的数组.md
+++ b/FluentPython/02_序列构成的数组.md
@@ -74,9 +74,9 @@ sys.getsizeof(test)
 ```
 
 ## 排序
-### `list.sort`
+### `list.sort()`
 就地排序，改变原序列的值并且返回`None`
-### `sorted`
+### `sorted()`
 不改变原序列的值，生成一个新的列表，可以接受任何形式的可迭代对象作为参数。
 ### 共同点：
 两个可选关键字参数   
