feat: 字典和集合

--- a/FluentPython/03_字典和集合.md
+++ b/FluentPython/03_字典和集合.md
@@ -72,6 +72,11 @@ print(dic_proxy["key"])
 dic_proxy["newkey"] = "newvalue"
 ```
 
+## 字典的特点
++ 内存开销大，散列表是稀疏数组导致了大内存的开销。
++ 键查询速度快。
++ 往字典里添加新建可能会导致已有键的顺序改变。----那么如何避免这个问题呢？
+
 # 集合论
 集合中的元素必须是可散列的，`set`类型本身是不可散列的。集合的本质是许多唯一对象的集合，因此集合可以用于去重。接受一个可迭代对象去掉重复部分。
 
@@ -104,4 +109,18 @@ s = {i for i in l if i < 5}
 + `s.remove(e)` 异常，不存在抛出异常
 + `s.pop()`	随机移除，不存在抛出异常
 
+## 集合的特点
++ 元素必须是可散列的。
++ 内存开销大，由上一条特点导致。
++ 可以高效的判断元素是否存在某一个集合中。
++ 元素次序取决于添加次序
++ 添加新元素可能破坏原有次序。
+
 # 散列表
++ 散列表是一个稀疏数组（总是有空白的数组称为稀疏数组）。散列值在理想情况下越是相似，他们的散列值差别越大。
++ 盐值：盐值是python进程中的一个常量，每次启动Python解释器生成的盐值都不相同。盐值主要用于计算对象的散列值。在计算散列值时随机加盐可以防止DOS攻击。
++ 散列表的算法：略
++ 可散列的条件：
+	+ 支持`hash()`函数，并且通过`__hash__()`方法得到的散列值是不变的（同一次启动解释器中不变，加盐的原因不同次不相等）
+	+ 支持通过`__eq__()`方法来检测相等性。
+	+ 如`a == b`则`hash(a) == hash(b)`
