序列构成的数组

--- a/FluentPython/02_序列构成的数组.md
+++ b/FluentPython/02_序列构成的数组.md
@@ -5,8 +5,8 @@
 `str`、`bytes`、`bytearray`、`memoryview`、`array.array`等序列只能容纳一种类型。
 ## 可变序列
 `list`、`bytearray`、`memoryview`、`array.array`、`collections.deque`
-## 不可变序列
-`list`、`tuple`、`str`
+## 不可变序列    
+`tuple`、`str`
 
 # 列表
 ## 列表推导
