feat：序列构成的数组

--- a/FluentPython/02_序列构成的数组.md
+++ b/FluentPython/02_序列构成的数组.md
@@ -6,7 +6,7 @@
 ## 可变序列
 `list`、`bytearray`、`memoryview`、`array.array`、`collections.deque`
 ## 不可变序列    
-`tuple`、`str`
+`str`、`tuple`
 
 # 列表
 ## 列表推导
