--- a/FluentPython/11_接口：从协议到抽象基类2.0.md
+++ b/FluentPython/11_接口：从协议到抽象基类2.0.md
@@ -104,15 +104,15 @@ python提供了```register```函数来注册一个类为抽象基类的子类。
 --> 使用装饰器句法：**（python3.3以后）**
 
 ```python
-    @Tombola.register
-    class TomboList(List):
+@Tombola.register
+class TomboList(List):
 #....
 ```
 
 --> 使用函数：
 
 ```python
-    Tombola.register(TomboList)
+Tombola.register(TomboList)
 ```
 
 + 注册这个东西的作用是隐式的声明，它只是在告诉python解释器：这个类是这个抽象基类的子类
@@ -155,6 +155,11 @@ True
 
 **一只动物，我们如果说它是某某白鹅，那么它必须有白鹅的DNA。**
 **但是如果我们需要一个鸭子来展出。我们仍然可能可以把这只白鹅的近亲放上去而不被发现有问题。因为某种程度上，这个动物的行为很可能很像鸭子。**
+
+以下是人话：
+
+一个实现的类，如果说他是一个某某类型，那么他应该继承该对应的抽象基类。
+但是当我们需要一个其他实例的场景中，如果这个类实现了相关的方法，我们也可以把它的实例传进去而不会抛出Error，因为即便类是一个某某抽象基类的子类，它也仍然可以遵守很多其他的协议。
 
 
            
